k8s/infra/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:3
          ports:
            - containerPort: 9411
          readinessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: ecommerce
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
